BUGFIX: fix broken image alignment regression

--- a/app/DistributionPackages/MyVendor.AwesomeNeosProject/Resources/Private/Fusion/Presentation/Components/Image/_Image.scss
+++ b/app/DistributionPackages/MyVendor.AwesomeNeosProject/Resources/Private/Fusion/Presentation/Components/Image/_Image.scss
@@ -25,8 +25,6 @@ img {
 
     picture {
         display: inline-block;
-        margin: auto;
-        width: 100%;
         height: 100%;
     }
 }
